Updated blog with mailing list, jdk 14records and new blog domain name.